k8s/apps/linkding/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: linkding
  namespace: linkding
spec:
  selector:
    app: linkding
  ports:
    - port: 80
      targetPort: 9090
      protocol: TCP
