k8s/apps/linkding/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: linkding
  namespace: linkding
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - linkding.k8s.${DOMAIN}
      secretName: wildcard-k8s-tls
  rules:
    - host: linkding.k8s.${DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: linkding
                port:
                  number: 80
